pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: handson
  namespace: handson
  labels:
    component: handson
spec:
  restartPolicy: Never
  containers:
  - name: handson
    image: kavatech/handson
    ports:
    - containerPort: 8080
