pod_configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: handson
  namespace: handson
  labels:
    component: handson
spec:
  restartPolicy: Never
  containers:
  - name: handson
    image: kavatech/handson
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: config-volume
      mountPath: /data
  volumes:
  - name: config-volume
    configMap:
      name: handson-configmap
