svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: handson
  namespace: handson
  labels:
    component: handson
spec:
  selector:
    component: handson
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31337
  type: NodePort
